prns-host/bindings/swift/Sources/CPrnsHost/include/prns_host.h

typedef uint32_t PrnsStatus;
typedef uint32_t PrnsBitrateKind;
typedef uint32_t PrnsResponseTimeoutKind;
typedef uint32_t PrnsResourceCompressionKind;
typedef uint32_t PrnsResourceStrategyKind;
typedef uint32_t PrnsEventField;
/*
 * Ownership and lifetime contract:
 * - Input byte/string views and configuration arrays are borrowed only for
 *   the duration of the call; prns_host_create copies all retained data.
 * - Every non-null opaque handle returned through an out parameter has one
 *   owner and must be passed exactly once to its matching *_release function.
 * - Release and interrupt functions accept NULL and do nothing. Functions
 *   with status results reject other required NULL arguments.
 * - A release must not race another operation on the same handle. Interrupt
 *   may race its matching wait; release only after that wait has returned.
 * - UINT32_MAX is the infinite timeout for command, event-stream, and
 *   supplied-Pipe request waits.
 * - Supplied-Pipe readiness is only a wake hint. Consumers pull an owned
 *   open-request handle, then provide or decline it exactly once.
 * - A successful descriptor-provide call consumes every non-negative
 *   descriptor, including one rejected because closure won a race.
 * - All exported calls contain Rust panics and report PRNS_STATUS_PANIC where
 *   the function has a status result; no Rust unwinding crosses this ABI.
 */

typedef struct PrnsHost PrnsHost;
typedef struct PrnsHostInspection PrnsHostInspection;
typedef struct PrnsIssuedCommand PrnsIssuedCommand;
typedef struct PrnsResourceUpload PrnsResourceUpload;
typedef struct PrnsEventStream PrnsEventStream;
typedef struct PrnsReadinessRegistration PrnsReadinessRegistration;
typedef struct PrnsEvent PrnsEvent;
typedef struct PrnsResourceStream PrnsResourceStream;
typedef void (*PrnsReadinessCallback)(void *context);
typedef struct PrnsByteView {
    const uint8_t *data;
    size_t length;
} PrnsByteView;
typedef struct PrnsStringView {
    const uint8_t *data;
    size_t length;
} PrnsStringView;
typedef struct PrnsContractInfo {
    size_t struct_size;
    uint32_t abi;
    uint32_t schema_version;
    PrnsStringView product_version;
} PrnsContractInfo;
typedef struct PrnsInterfaceRoutingPolicy {
    size_t struct_size;
    uint8_t has_mode;
    PrnsInterfaceMode mode;
    uint8_t has_gravity;
    int64_t gravity;
    uint8_t has_recursive_path_requests;
    uint8_t recursive_path_requests;
    uint8_t has_announces_from_internal;
    uint8_t announces_from_internal;
    uint8_t has_announces_to_internal;
    uint8_t announces_to_internal;
} PrnsInterfaceRoutingPolicy;
typedef struct PrnsBackendInfo {
    size_t struct_size;
    PrnsBackendKind backend;
    const PrnsCapability *capabilities;
    size_t capability_count;
    const PrnsInterfaceKind *interface_kinds;
    size_t interface_kind_count;
} PrnsBackendInfo;
typedef struct PrnsHostSnapshot {
    size_t struct_size;
    uint64_t revision;
    PrnsBackendInfo backend;
    const PrnsInterfaceSnapshot *interfaces;
    size_t interface_count;
    const PrnsRouteSnapshot *routes;
    size_t route_count;
    uint32_t active_link_count;
    const PrnsDestinationIdentitySnapshot *destination_identities;
    size_t destination_identity_count;
    PrnsRuntimeHealthSnapshot runtime;
    PrnsPersistenceSnapshot persistence;
} PrnsHostSnapshot;
typedef struct PrnsInterfaceConfig {
    size_t struct_size;
    PrnsInterfaceKind kind;
    uint8_t has_group_id;
    PrnsStringView group_id;
    uint8_t has_discovery_scope;
    PrnsDiscoveryScope discovery_scope;
    uint8_t has_discovery_port;
    uint16_t discovery_port;
    uint8_t has_data_port;
    uint16_t data_port;
    const PrnsStringView *devices;
    size_t device_count;
    const PrnsStringView *ignored_devices;
    size_t ignored_device_count;
    uint8_t has_multicast_address_type;
    PrnsMulticastAddressType multicast_address_type;
    PrnsStringView target;
    PrnsStringView bind;
    PrnsStringView local;
    PrnsStringView peer;
    PrnsBitrateKind bitrate_kind;
    uint64_t bitrate_bps;
    PrnsStringView port;
    PrnsSerialLineConfig line;
    uint8_t flow_control;
    uint32_t preamble_millis;
    uint32_t transmit_tail_millis;
    uint8_t persistence;
    uint32_t slot_time_millis;
    uint8_t has_station_callsign;
    PrnsStringView station_callsign;
    uint8_t has_station_interval_seconds;
    uint64_t station_interval_seconds;
    PrnsStringView callsign;
    uint8_t ssid;
    PrnsRNodeRadioConfig radio;
    uint8_t has_airtime_limit_short_centi_percent;
    uint16_t airtime_limit_short_centi_percent;
    uint8_t has_airtime_limit_long_centi_percent;
    uint16_t airtime_limit_long_centi_percent;
    const PrnsMultiRNodeMemberConfig *members;
    size_t member_count;
    const PrnsStringView *command;
    size_t command_count;
    uint64_t respawn_delay_millis;
    const PrnsStringView *peers;
    size_t peer_count;
    uint8_t connectable;
    PrnsStringView url;
    PrnsWebSocketFramingSelection websocket_framing_selection;
} PrnsInterfaceConfig;
typedef struct PrnsHostOptions {
    size_t struct_size;
    uint32_t required_abi;
    uint32_t required_schema_version;
    PrnsStringView required_product_version;
    PrnsLimits limits;
    PrnsHostRole role;
    PrnsIdentityConfig identity;
    const PrnsDestinationConfig *destinations;
    size_t destination_count;
    const PrnsCapability *required_capabilities;
    size_t required_capability_count;
    PrnsPersistenceConfig persistence;
} PrnsHostOptions;
typedef struct PrnsLifecycle {
    size_t struct_size;
    uint64_t revision;
    PrnsLifecyclePhase phase;
    uint32_t reason;
} PrnsLifecycle;
typedef struct PrnsCommandResult {
    size_t struct_size;
    PrnsCommandOutcomeKind outcome;
    PrnsCommandFailureKind failure;
    PrnsDeliveryEvidenceKind evidence;
    uint64_t rtt_millis;
    PrnsByteView value;
    PrnsStringView detail;
} PrnsCommandResult;
/* product_version points to process-lifetime static storage. */
/* Returned host views remain valid until prns_host_release. */
/* Result views remain valid until prns_command_release. */
/* Event views remain valid until prns_event_release. */
/* A resource may be claimed once and remains owned after its event is released. */
/* out_chunk remains valid until the next call or release on this stream. */

PRNS_HOST_API PrnsStatus prns_contract_info(PrnsContractInfo *out_value);
PRNS_HOST_API PrnsStatus prns_backend_info(PrnsBackendInfo *out_value);
PRNS_HOST_API PrnsStatus prns_host_create(const PrnsHostOptions *options, PrnsHost **out_value);
PRNS_HOST_API void prns_host_release(PrnsHost *host);
PRNS_HOST_API PrnsStatus prns_host_lifecycle(const PrnsHost *host, PrnsLifecycle *out_value);
PRNS_HOST_API PrnsStatus prns_host_snapshot(const PrnsHost *host, uint32_t timeout_millis, PrnsHostInspection **out_value);
PRNS_HOST_API PrnsStatus prns_host_snapshot_read(const PrnsHostInspection *host_inspection, PrnsHostSnapshot *out_value);
PRNS_HOST_API void prns_host_snapshot_release(PrnsHostInspection *host_inspection);
PRNS_HOST_API PrnsStatus prns_host_identity_hash(const PrnsHost *host, PrnsByteView *out_value);
PRNS_HOST_API size_t prns_host_destination_count(const PrnsHost *host);
PRNS_HOST_API PrnsStatus prns_host_destination_hash(const PrnsHost *host, size_t index, PrnsByteView *out_value);
PRNS_HOST_API PrnsStatus prns_host_begin_resource_upload(PrnsHost *host, PrnsByteView link_id, uint64_t declared_length, const PrnsByteView *packed_metadata, PrnsResourceCompressionKind compression_kind, PrnsResourceUpload **out_value);
PRNS_HOST_API PrnsStatus prns_resource_upload_write(PrnsResourceUpload *resource_upload, PrnsByteView chunk);
PRNS_HOST_API PrnsStatus prns_resource_upload_is_writable(const PrnsResourceUpload *resource_upload, uint8_t *out_value);
PRNS_HOST_API PrnsStatus prns_resource_upload_finish(PrnsResourceUpload *resource_upload, PrnsIssuedCommand **out_value);
PRNS_HOST_API void prns_resource_upload_abort(PrnsResourceUpload *resource_upload);
PRNS_HOST_API void prns_resource_upload_release(PrnsResourceUpload *resource_upload);
PRNS_HOST_API PrnsStatus prns_host_stop(PrnsHost *host);
PRNS_HOST_API PrnsStatus prns_command_wait(PrnsIssuedCommand *issued_command, uint32_t timeout_millis, PrnsCommandResult *out_value);
PRNS_HOST_API PrnsStatus prns_command_register_readiness(PrnsIssuedCommand *issued_command, PrnsReadinessCallback callback, void *context, PrnsReadinessRegistration **out_value);
PRNS_HOST_API void prns_command_interrupt_wait(PrnsIssuedCommand *issued_command);
PRNS_HOST_API void prns_command_release(PrnsIssuedCommand *issued_command);
PRNS_HOST_API PrnsStatus prns_host_claim_application_events(PrnsHost *host, PrnsEventStream **out_value);
PRNS_HOST_API PrnsStatus prns_host_claim_diagnostics(PrnsHost *host, PrnsEventStream **out_value);
PRNS_HOST_API PrnsStatus prns_event_stream_register_readiness(PrnsEventStream *event_stream, PrnsReadinessCallback callback, void *context, PrnsReadinessRegistration **out_value);
PRNS_HOST_API void prns_readiness_registration_release(PrnsReadinessRegistration *readiness_registration);
PRNS_HOST_API void prns_event_stream_interrupt_wait(PrnsEventStream *event_stream);
PRNS_HOST_API void prns_event_stream_release(PrnsEventStream *event_stream);
PRNS_HOST_API PrnsStatus prns_event_stream_next(PrnsEventStream *event_stream, uint32_t timeout_millis, PrnsEvent **out_value);
PRNS_HOST_API void prns_event_release(PrnsEvent *event);
PRNS_HOST_API uint32_t prns_event_kind(const PrnsEvent *event);
PRNS_HOST_API PrnsStatus prns_event_bytes(const PrnsEvent *event, PrnsEventField field, PrnsByteView *out_value);
PRNS_HOST_API PrnsStatus prns_event_string(const PrnsEvent *event, PrnsEventField field, PrnsStringView *out_value);
PRNS_HOST_API PrnsStatus prns_event_u64(const PrnsEvent *event, PrnsEventField field, uint64_t *out_value);
PRNS_HOST_API PrnsStatus prns_event_u128(const PrnsEvent *event, PrnsEventField field, uint64_t *out_low, uint64_t *out_high);
PRNS_HOST_API PrnsStatus prns_event_resource_stream(PrnsEvent *event, PrnsResourceStream **out_value);
PRNS_HOST_API void prns_resource_stream_release(PrnsResourceStream *resource_stream);
PRNS_HOST_API PrnsStatus prns_resource_stream_next(PrnsResourceStream *resource_stream, size_t maximum_bytes, PrnsByteView *out_chunk, uint8_t *out_finished);
PRNS_HOST_API PrnsStatus prns_host_announce(PrnsHost *host, PrnsByteView destination, const PrnsByteView *interface_id, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_send_single_packet(PrnsHost *host, PrnsByteView destination, PrnsByteView payload, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_close_link(PrnsHost *host, PrnsByteView link_id, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_attach_tcp_server(PrnsHost *host, PrnsStringView bind, PrnsBitrateKind bitrate_kind, uint64_t bitrate_bps, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_attach_tcp_client(PrnsHost *host, PrnsStringView target, PrnsBitrateKind bitrate_kind, uint64_t bitrate_bps, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_attach_udp(PrnsHost *host, PrnsStringView local, PrnsStringView peer, PrnsBitrateKind bitrate_kind, uint64_t bitrate_bps, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_detach_interface(PrnsHost *host, PrnsByteView interface_id, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_establish_link(PrnsHost *host, PrnsByteView destination, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_request_path(PrnsHost *host, PrnsByteView destination, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_identify(PrnsHost *host, PrnsByteView link_id, PrnsByteView identity, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_send_link_packet(PrnsHost *host, PrnsByteView link_id, PrnsByteView payload, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_request(PrnsHost *host, PrnsByteView link_id, PrnsByteView path_hash, PrnsByteView payload, PrnsResponseTimeoutKind timeout_kind, uint64_t timeout_millis, const uint64_t *maximum_response_bytes, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_respond(PrnsHost *host, PrnsByteView link_id, PrnsByteView request_id, uint64_t request_rtt_millis, PrnsByteView payload, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_send_resource(PrnsHost *host, PrnsByteView link_id, PrnsByteView payload, const PrnsByteView *packed_metadata, PrnsResourceCompressionKind compression_kind, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_set_link_resource_strategy(PrnsHost *host, PrnsByteView link_id, PrnsResourceStrategyKind strategy_kind, uint64_t maximum_uncompressed_bytes, uint8_t accept_compressed, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_set_destination_resource_strategy(PrnsHost *host, PrnsByteView destination, PrnsResourceStrategyKind strategy_kind, uint64_t maximum_uncompressed_bytes, uint8_t accept_compressed, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_send_channel_message(PrnsHost *host, PrnsByteView link_id, uint16_t message_type, PrnsByteView payload, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_allow_requester(PrnsHost *host, PrnsByteView destination, PrnsByteView path_hash, PrnsByteView identity, PrnsIssuedCommand **out_command);
PRNS_HOST_API PrnsStatus prns_host_attach_interface(PrnsHost *host, const PrnsInterfaceConfig *config, const PrnsInterfaceRoutingPolicy *routing, PrnsIssuedCommand **out_command);